--- a/EFC2.0/Pages/Organization/org_documents/empdoc.cshtml
+++ b/EFC2.0/Pages/Organization/org_documents/empdoc.cshtml
@@ -1,1 +1,80 @@
-﻿
+﻿@page
+@{
+    Layout = "~/Pages/Shared/_Layout.cshtml";
+}
+<div class="app-container" dir="ltr">
+    <div class="container-fluid px-0 main-content-page h-100">
+        <partial name="Organization_Tabs" />
+        <div class="aos-init aos-animate">
+            <div class="child-content nav-active-top" id="summary">
+                <ul class="topnav-child-1">
+                    <li><a href="/organization/org_documents/letters"> HR Letters</a> </li>
+                    <li class="nav-active-top"><a href="/organization/org_documents/empdoc"> Employee Documents</a> </li>
+                    <li><a href="/organization/org_documents/policygrid"> Policies</a> </li>
+                    <li><a href="/organization/org_documents/documenttype"> Document Type</a></li>
+                </ul>
+                <div class="container-fluid p-3">
+                    <div class="grand-child nav-active-top">
+                        <div id="employeeDetailPage" class="ng-star-inserted">
+                            <div class="page-title-h">
+                                <div class="d-flex justify-content-start align-items-center">
+                                    <mat-icon role="img" class="mat-icon notranslate text-muted material-icons mat-icon-no-color" style="cursor: pointer;">chevron_left </mat-icon>
+                                    <h4 class="card-title m-0 card-heading">
+                                        Employee Documents
+                                    </h4>
+                                    <mat-icon role="img" class="mat-icon notranslate text-muted material-icons mat-icon-no-color ng-star-inserted" style="cursor: pointer;">turned_in_not </mat-icon>
+                                </div>
+                            </div>
+                            <mat-card class="mat-card mat-focus-indicator b-shadow-none border-0">
+                                <div class="mainContentHeightOrg pt-0">
+                                    <div class="container-fluid py-2">
+                                        <div class="row">
+                                            <div class="col-md-2 tab-col-width2 rd-form-select my-1">
+                                                <label class="rd-form-select-label mb-1">Status</label>
+                                                <select class="form-select">
+                                                    <option value="">Select Status</option>
+                                                    <option value="">Select Status</option>
+                                                    <option value="">Select Status</option>
+                                                    <option value="">Select Status</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-2 tab-col-width2 rd-form-select my-1">
+                                                <label class="rd-form-select-label mb-1">Department</label>
+                                                <select class="form-select">
+                                                    <option value="">Select Department</option>
+                                                    <option value="">Select Status</option>
+                                                    <option value="">Select Status</option>
+                                                    <option value="">Select Status</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-2 tab-col-width2 rd-form-select my-1">
+                                                <label class="rd-form-select-label mb-1">Designation</label>
+                                                <select class="form-select">
+                                                    <option value="">Select Designation</option>
+                                                    <option value="">Select Status</option>
+                                                    <option value="">Select Status</option>
+                                                    <option value="">Select Status</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-2 tab-col-width2 rd-form-select my-1">
+                                                <label class="rd-form-select-label mb-1">Employee</label>
+                                                <select class="form-select">
+                                                    <option value="">Select Employee</option>
+                                                    <option value="">Select Status</option>
+                                                    <option value="">Select Status</option>
+                                                    <option value="">Select Status</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-2 d-flex align-items-end tab-col-width2 mb-1"><button type="button" class="mx-2 rd-btn-tertairy-sm rd-text-secondary-1">Reset</button><button type="button" class="mx-2 rd-btn-primary-sm rd-text-primary-1">Submit</button></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="my-1 card-edit text-center p-3 ng-star-inserted">  Select Employee to view the Description. </div>
+                            </mat-card>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
