--- a/EFC2.0/Pages/Shared/Organization_Tabs.cshtml
+++ b/EFC2.0/Pages/Shared/Organization_Tabs.cshtml
@@ -9,8 +9,8 @@
     <li><a href="/organization/org_exit/notice_period" data-target="exit">Exit</a></li>
     <li><a href="/organization/help_desk/help_summary" data-target="help-desk">Help Desk</a></li>
     <li><a href="/organization/org_documents/letters" data-target="documents">Documents</a></li>
-    <li><a href="/organization/announcements/announcementslist" data-target="announcements">Announcements</a></li>
-    <li><a href="/organization/assets" data-target="assets">Assets</a></li>
+    <li><a href="/organization/announcement/announcementlist" data-target="announcements">Announcements</a></li>
+    <li><a href="/organization/assets/asset_dashboard" data-target="assets">Assets</a></li>
     <li><a href="/organization/survey" data-target="survey">Employee Pulse Survey</a></li>
     <li><a href="/organization/settings" data-target="settings">Settings</a></li>
 </ul>
