--- a/EFC2.0/Pages/Organization/assets/AssetShipments/Index.cshtml
+++ b/EFC2.0/Pages/Organization/assets/AssetShipments/Index.cshtml
@@ -6,18 +6,21 @@
     <div class="container-fluid px-0 main-content-page h-100">
         <partial name="Organization_Tabs" />
         <div class="aos-init aos-animate">
-            <div class="child-content nav-active-top" id="org-structure">
+            <div class="child-content nav-active-top" id="summary">
                 <ul class="topnav-child-1">
-                    <li><a href="/organization/announcement/category"> Categories</a> </li>
-                    <li class="nav-active-top"><a href="/organization/announcement/announcementlist"> All Announcements</a> </li>
+                    <li><a href="/organization/assets/asset_dashboard"> Summary</a> </li>
+                    <li class="nav-active-top"><a href="/organization/assets/asset_store"> Asset Categories</a> </li>
+                    <li><a href="/organization/assets/asset_available"> Asset availability</a> </li>
+                    <li><a href="/organization/assets/asset_repair"> Repair Team</a></li>
+                    <li><a href="/organization/assets/purchase_order"> Purchase Order</a></li>
                 </ul>
                 <div class="container-fluid p-3">
                     <div class="grand-child nav-active-top">
                         <div class="ng-star-inserted">
                             <div class="page-title-h">
                                 <div class="d-flex justify-content-start align-items-center">
-                                    <mat-icon role="img" class="mat-icon notranslate text-muted material-icons mat-icon-no-color" style="cursor: pointer;">chevron_left </mat-icon>
-                                    <h4 class="card-title m-0 card-heading">Announcements</h4>
+                                    <a href="/organization/assets/assetItems"><mat-icon role="img" class="mat-icon notranslate text-muted material-icons mat-icon-no-color" style="cursor: pointer;">chevron_left </mat-icon></a>
+                                    <h4 class="card-title m-0 card-heading">Asset Categories / Asset Type / Asset Configuration Details / <span class="fw-700">Add Shipment</span></h4>
                                 </div>
                             </div>
                             <mat-card class="mat-card mat-focus-indicator b-shadow-none border-0">
@@ -27,8 +30,7 @@
                                             <input type="text" class="grid-search-box" placeholder="Search" fdprocessedid="xdmbl">
                                             <mat-icon role="img" class="mat-icon notranslate search-icon material-icons mat-icon-no-color">search</mat-icon>
                                         </div>
-                                        <button data-bs-toggle="modal" data-bs-target="#addEditAnnouncementModal" type="button" class="mat-ripple p-element rd-round-button ng-star-inserted"><img src="/images/add.svg"></button>
-                                        <button type="button" ptooltip="Download" tooltipposition="top" class="mat-ripple p-element mat-menu-trigger rd-round-button"><img src="/images/download.svg"></button>
+                                        <button data-bs-toggle="modal" data-bs-target="#addEditAssetCategoryModal" type="button" class="mat-ripple p-element rd-round-button ng-star-inserted" fdprocessedid="q13ruj"><img src="/images/add.svg"></button>
                                     </div>
                                     <div class="col-12 px-0">
                                         <div class="ng-star-inserted">
@@ -36,43 +38,28 @@
                                                 <table class="mat-table cdk-table">
                                                     <thead role="rowgroup">
                                                         <tr class="mat-header-row cdk-header-row ng-star-inserted">
-                                                            <th class="mat-header-cell cdk-header-cell">Subject</th>
-                                                            <th class="mat-header-cell cdk-header-cell">Category</th>
-                                                            <th class="mat-header-cell cdk-header-cell">Priority</th>
-                                                            <th class="mat-header-cell cdk-header-cell">Added By</th>
-                                                            <th class="mat-header-cell cdk-header-cell"> Actions </th>
+                                                            <th class="mat-header-cell cdk-header-cell">Asset Item Name</th>
+                                                            <th class="mat-header-cell cdk-header-cell text-center">Employee Name</th>
+                                                            <th class="mat-header-cell cdk-header-cell text-center">Created By</th>
+                                                            <th class="mat-header-cell cdk-header-cell text-center">Employee Comments</th>
+                                                            <th class="mat-header-cell cdk-header-cell text-center">End Date</th>
+                                                            <th class="mat-header-cell cdk-header-cell text-center">Comments</th>
+                                                            <th class="mat-header-cell cdk-header-cell text-center">Status</th>
+                                                            <th class="mat-header-cell cdk-header-cell text-center"> Actions </th>
                                                         </tr>
                                                     </thead>
                                                     <tbody role="rowgroup">
-                                                        <tr class="mat-row cdk-row ng-star-inserted">
-                                                            <td class="mat-cell cdk-cell">Updated Employee Handbook</td>
-                                                            <td class="mat-cell cdk-cell">Policy Changes</td>
-                                                            <td class="mat-cell cdk-cel"><span class="badge rounded-pill bg-danger">High</span></td>
-                                                            <td class="mat-cell cdk-cel">HR DBMR</td>
-                                                            <td class="mat-cell cdk-cell">
-                                                                <img data-bs-toggle="modal" data-bs-target="#addEditAnnouncementModal" src="/images/edit1.svg" alt="Edit" title="Edit" width="16px" class="img-fluid me-2">
-                                                                <img src="/images/trash.svg" alt="Delete" title="Delete" width="16px" class="img-fluid">
+                                                        @* <tr class="mat-row cdk-row ng-star-inserted">
+                                                            <td class="mat-cell cdk-cell">Office Supplies</td>
+                                                            <td class="mat-cell cdk-cell text-center"><img src="/images/external.png" alt="Chat" width="22" title="View Assets" class="img-fluid"></td>
+                                                            <td class="mat-cell cdk-cell text-center">-</td>
+                                                            <td class="mat-cell cdk-cell text-center">
+                                                                <img data-bs-toggle="modal" data-bs-target="#addEditAssetCategoryModal" src="/images/edit1.svg" alt="Right Arrow" title="Edit" class="img-fluid me-2">
+                                                                <img src="/images/trash.svg" alt="Chat" title="Delete" class="img-fluid">
                                                             </td>
-                                                        </tr>
-                                                        <tr class="mat-row cdk-row ng-star-inserted">
-                                                            <td class="mat-cell cdk-cell">Updated Employee Handbook</td>
-                                                            <td class="mat-cell cdk-cell">Policy Changes</td>
-                                                            <td class="mat-cell cdk-cel"><span class="badge rounded-pill bg-warning">Medium</span></td>
-                                                            <td class="mat-cell cdk-cel">HR DBMR</td>
-                                                            <td class="mat-cell cdk-cell">
-                                                                <img data-bs-toggle="modal" data-bs-target="#addEditAnnouncementModal" src="/images/edit1.svg" alt="Edit" title="Edit" width="16px" class="img-fluid me-2">
-                                                                <img src="/images/trash.svg" alt="Delete" title="Delete" width="16px" class="img-fluid">
-                                                            </td>
-                                                        </tr>
-                                                        <tr class="mat-row cdk-row ng-star-inserted">
-                                                            <td class="mat-cell cdk-cell">Updated Employee Handbook</td>
-                                                            <td class="mat-cell cdk-cell">Policy Changes</td>
-                                                            <td class="mat-cell cdk-cel"><span class="badge rounded-pill bg-success">Low</span></td>
-                                                            <td class="mat-cell cdk-cel">HR DBMR</td>
-                                                            <td class="mat-cell cdk-cell">
-                                                                <img data-bs-toggle="modal" data-bs-target="#addEditAnnouncementModal" src="/images/edit1.svg" alt="Edit" title="Edit" width="16px" class="img-fluid me-2">
-                                                                <img src="/images/trash.svg" alt="Delete" title="Delete" width="16px" class="img-fluid">
-                                                            </td>
+                                                        </tr> *@
+                                                        <tr class="mat-row mat-no-data-row ng-star-inserted" role="row">
+                                                            <td colspan="9999" class="text-muted no-results ng-star-inserted"><img src="/images/No result found.svg" class="no-result-found"></td>
                                                         </tr>
                                                     </tbody>
                                                 </table>
@@ -159,71 +146,77 @@
         </div>
     </div>
 </div>
-
-<div class="modal fade" id="addEditAnnouncementModal">
-    <div class="modal-dialog efcModal efcMaxModal">
+<div class="modal fade" id="addEditAssetCategoryModal">
+    <div class="modal-dialog efcModal efcMaxModal modal-dialog-scrollable">
         <div class="modal-content">
-            <div class="rd-dialog-heading p-0">New Announcement</div>
+            <div class="rd-dialog-heading p-0">
+                Add Shipment
+            </div>
             <div class="row">
-                <div class="col-md-6 rd-form-select my-2">
-                    <label class="rd-form-select-label mb-1">Category *</label>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Legal Entity *</label>
                     <select class="form-select">
-                        <option selected>Select Category</option>
-                        <option value="1">1</option>
+                        <option selected>Select Legal Entity</option>
                     </select>
                 </div>
-                <div class="col-md-6 rd-form-select my-2">
-                    <label class="rd-form-select-label mb-1">Priority *</label>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">
+                        Select Employee *
+                    </label>
                     <select class="form-select">
-                        <option selected>Select Priority</option>
-                        <option value="1">1</option>
+                        <option selected>Select Select Employee</option>
                     </select>
                 </div>
-                <div class="col-md-12 my-2">
-                    <div>
-                        <label class="rd-form-select-label mb-2 me-2">
-                            <input type="radio" id="radioManual" class="form-check-input" name="radioboxName" checked="">
-                            <span>Notify All Employees</span>
-                        </label>
-                        <label class="rd-form-select-label mb-2 me-2">
-                            <input type="radio" id="radioUpload" class="form-check-input" name="radioboxName">
-                            <span>Notify Selected Employees</span>
-                        </label>
-                    </div>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Start Date *</label>
+                    <input type="date" class="form-control" placeholder="Start Date" />
                 </div>
-                <div class="col-md-6 rd-form-select my-2">
-                    <label class="rd-form-select-label mb-1">CC *</label>
-                    <select class="form-select">
-                        <option selected>Select CC</option>
-                        <option value="1">1</option>
-                    </select>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Expected End Date *</label>
+                    <input type="date" class="form-control" placeholder="Expected End Date" />
                 </div>
-                <div class="col-md-6 rd-form-select my-2">
-                    <label class="rd-form-select-label mb-1">BCC *</label>
-                    <select class="form-select">
-                        <option selected>Select BCC</option>
-                        <option value="1">1</option>
-                    </select>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">From Location *</label>
+                    <input type="text" class="form-control" placeholder="Enter From Location" />
                 </div>
-                <div class="col-md-12 my-2">
-                    <div>
-                        <label class="rd-form-select-label align-items-center mb-2"><input type="checkbox" id="1" class="form-check-input" name="checkboxName"> <span>Notify Other Emails</span></label>
-                    </div>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">To Location *</label>
+                    <input type="text" class="form-control" placeholder="Enter To Location" />
                 </div>
-                <div class="col-md-12 rd-form-select my-2">
-                    <label class="rd-form-select-label mb-1">Subject *</label>
-                    <input type="text" class="form-control" placeholder="Enter Subject" />
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Shipment Cost *</label>
+                    <input type="text" class="form-control" placeholder="Enter Shipment Cost" />
                 </div>
-                <div class="col-md-12 rd-form-select my-2">
-                    <textarea type="text" id="announcementEditor"></textarea>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Upload Shipment Proof Document</label>
+                    <input type="file" class="form-control" placeholder="Upload Shipment Proof Document" />
+                    <label class="rd-form-select-label">Upload PNG,JPEG,PDF,DOCX,XLSX etc..</label>
                 </div>
-                <div class="col-md-12 rd-form-select my-2">
-                    <label class="rd-form-select-label mb-1">Upload Attachments </label>
-                    <input type="file" class="form-control" placeholder="Upload Attachments" />
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Upload HR Comments Document</label>
+                    <input type="file" class="form-control" placeholder="Upload HR Comments Document" />
+                    <label class="rd-form-select-label">Upload PNG,JPEG,PDF,DOCX,XLSX etc..</label>
+                </div>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Upload Shipment Receipt Document</label>
+                    <input type="file" class="form-control" placeholder="Upload Shipment Receipt Document" />
+                    <label class="rd-form-select-label">Upload PNG,JPEG,PDF,DOCX,XLSX etc..</label>
+                </div>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Additional Shipment Details</label>
+                    <textarea type="text" class="form-control" placeholder="Enter Additional Shipment Details"></textarea>
+                </div>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">HR Comments</label>
+                    <textarea type="text" class="form-control" placeholder="Enter HR Comments"></textarea>
+                </div>
+                <div class="col-md-12 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Description*</label>
+                    <textarea type="text" class="form-control" placeholder="Enter Description"></textarea>
                 </div>
             </div>
             <div class="modal-footer mt-2">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary">Submit</button>
             </div>
         </div>
