--- a/EFC2.0/Pages/Shared/_Layout.cshtml
+++ b/EFC2.0/Pages/Shared/_Layout.cshtml
@@ -4034,6 +4034,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
+    <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
     <script src="~/js/common.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
