--- a/EFC2.0/wwwroot/css/style.css
+++ b/EFC2.0/wwwroot/css/style.css
@@ -39696,7 +39696,8 @@ tr.mat-row, tr.mat-footer-row {
 
     .page-title-h .card-title {
         padding: 0 8px;
-        text-transform: capitalize
+        text-transform: capitalize;
+        font-weight: 500 !important;
     }
 
 .rd-form-select, .rd-form-input {
