--- a/EFC2.0/Pages/Shared/Organization_Tabs.cshtml
+++ b/EFC2.0/Pages/Shared/Organization_Tabs.cshtml
@@ -1,6 +1,4 @@
 ﻿
-<link href="~/css/tabs.css" rel="stylesheet" media="all" onload="this.media='all'" />
-<link href="~/css/organization.css" rel="stylesheet" media="all" onload="this.media='all'" />
 <ul class="topnav">
     <li class="nav-active-top"><a href="/organization/org_dashboard/org_summary" data-target="summary">Dashboard</a></li>
     <li><a href="/organization/org_employees/employee_view" data-target="employees">Employees</a></li>
@@ -11,6 +9,6 @@
     <li><a href="/organization/org_documents/letters" data-target="documents">Documents</a></li>
     <li><a href="/organization/announcement/announcementlist" data-target="announcements">Announcements</a></li>
     <li><a href="/organization/assets/asset_dashboard" data-target="assets">Assets</a></li>
-    <li><a href="/organization/survey" data-target="survey">Employee Pulse Survey</a></li>
-    <li><a href="/organization/settings" data-target="settings">Settings</a></li>
+    <li><a href="/organization/empsurvey/questions" data-target="survey">Employee Pulse Survey</a></li>
+    <li><a href="/organization/orgsettings/workflow_setup" data-target="settings">Settings</a></li>
 </ul>
